# aiSales

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.js
docs/config/: config.example.ini
src/: lib.rs
src-tauri/: .gitignore  tauri.conf.json
src-tauri/src/: chrome.rs  chrome_test.rs  lib.rs  main.rs
src/config/: mod.rs
src/marketing/: mod.rs
tests/: integration.rs
